# vlcb-rs

./: Cargo.toml  README.md
.cargo/: config.toml
framework/core/: Cargo.toml
framework/core/src/: can.rs  dcc.rs  fast_clock.rs  lib.rs  macros.rs  module.rs  service.rs  vlcb.rs
framework/macros/: Cargo.toml
framework/macros/src/: lib.rs
framework/module/: Cargo.toml
framework/module-macros/: Cargo.toml
framework/module-macros/src/: lib.rs
framework/module/examples/: minimalistic.rs
framework/module/src/: lib.rs  service_set.rs
framework/network/: Cargo.toml  LICENSE  README.md
framework/network/src/: lib.rs  macros.rs
framework/network/src/data/packet/: mod.rs
framework/network/src/data/packet/construct/: bus_ctrl.rs  ext.rs  layout_ctrl.rs  loco_ctrl.rs  mod.rs  module_cfg.rs
framework/network/src/iface/: mod.rs  socket_meta.rs  socket_set.rs  vlcb_packet.rs
framework/network/src/iface/interface/: can.rs  mod.rs  vlcb.rs
framework/network/src/phy/: can.rs  mod.rs
framework/network/src/socket/: mod.rs  module.rs
framework/network/src/storage/: mod.rs  packet_buffer.rs  ring_buffer.rs
framework/network/src/wire/: can.rs  mod.rs  vlcb.rs
framework/persistence/: Cargo.toml  README.md
framework/persistence/src/: lib.rs  node_config.rs
framework/ui/: Cargo.toml
framework/ui/src/: lib.rs
services/all/: Cargo.toml
services/all/src/: lib.rs
services/mns/: Cargo.toml
services/mns/src/: lib.rs
