[lib]
proc-macro = true

[package]
name = "vlcb-macros"
version = "1.0.0"
edition = "2021"
rust-version = "1.79"
authors = ["Freja <me@freja.codes>"]
description = "A VLCB module ties all other VLCB libraries and acts as a delegator. Implements default behavior"
documentation = "https://docs.rs/vlcb-rs/"
homepage = "https://github.com/0xfrej/vlcb-rs"
repository = "https://github.com/0xfrej/vlcb-rs.git"
readme = "README.md"
keywords = ["lcb", "cbus", "vlcb", "merg", "network"]
categories = ["no-std", "embedded", "network-programming"]
license = "GPL-3"

[dependencies]
syn = "2.0.64"
pad = "0.1.6"
quote = "1.0.36"
