[package]
name = "vlcb-svc-mns"
version = "1.0.0"
edition = "2021"
rust-version = "1.79"
authors = ["Freja <me@freja.codes>"]
description = "VLCB minimum node specification service."
documentation = "https://docs.rs/vlcb-rs/"
homepage = "https://github.com/0xfrej/vlcb-rs"
repository = "https://github.com/0xfrej/vlcb-rs.git"
readme = "README.md"
keywords = ["lcb", "cbus", "vlcb", "merg", "network"]
categories = ["no-std", "embedded", "network-programming"]
license = "GPL-3"
autoexamples = false

[dependencies]
vlcb-core = { path = "../../framework/core" }
vlcb-defs = { path = "../../vendor/VLCB-defs/rust" }
